[package]
name = "cargo-travis"
version = "0.0.11"
authors = ["roblabla <robinlambertz+dev@gmail.com>"]
description = "Run coverage, upload docs, and more on travis."
license = "MIT"
edition = "2018"

repository = "https://github.com/roblabla/cargo-travis"
readme = "README.md"

keywords = ["cargo", "cargo-subcommand", "travis", "coverage", "coveralls"]


[dependencies]
badge = "0.3"
cargo = "0.48.0"
docopt = "1.1.0"
env_logger = "0.8.1"
anyhow = "1.0.33"
fs_extra = "1.2.0"
log = "0.4.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
